--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,24 @@
 {
-  "name": "request-stream/request-stream",
-  "description": "Stream and request for PHP 5.3",
-  "keywords": ["request", "stream", "web request", "stream common"],
-  "homepage": "http://github.com/ZhukV/RequestStream",
-  "type": "library",
-  "license": "MIT",
-  "authors": [
-    {
-      "name": "Vitaliy Zhukv",
-      "email": "zhuk2205@gmail.com"
+    "name": "request-stream/request-stream",
+    "description": "Stream and request for PHP 5.3",
+    "keywords": ["request", "stream", "web request", "stream common"],
+    "homepage": "http://github.com/ZhukV/RequestStream",
+    "type": "library",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Vitaliy Zhukv",
+            "email": "zhuk2205@gmail.com"
+        }
+    ],
+
+    "require": {
+        "php": ">=5.3.3"
+    },
+
+    "minimum-stability": "dev",
+
+    "autoload": {
+        "psr-0": { "RequestStream": "src/" }
     }
-  ],
-
-  "require": {
-    "php": ">=5.3.3"
-  },
-
-  "autoload": {
-    "psr-0": { "RequestStream": "src/" }
-  }
 }
